--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <title>List App</title>
 </head>
 <body>
-    
-    <!-- jquery 3x CDN link  -->
+    <div class="container">
+        <h2>To-Do List App</h2>
+        <p><em> Double click to mark an item off, click on "x" to
+            delete an item, and drag items to reorder </em></p>
+
+            <form name="toDoList">
+                <input type="text" name="listItem" id="input">
+            </form>
+
+            <div onclick="newitem()" id="button">Add</div>
+            <br/>
+            <ol id="list"></ol>
+    </div>
+
+
+    <!-- jQuery 3x CDN link  -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" 
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" 
     crossorigin="anonymous"></script>
+
+    <!-- jQuery UI 1.13 -->
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" 
+    integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" 
+    crossorigin="anonymous"></script>
+
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
