Corrected newItem() and added delete button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 <input type="text" name="listItem" id="input">
             </form>
 
-            <div onclick="newitem()" id="button">Add</div>
+            <div onclick="newItem()" id="button">Add</div>
             <br/>
-            <ol id="list"></ol>
+            <ol id="list">
+                <button class="delete"></button>
+            </ol>
     </div>
 
 
