Trying sortableJS library for touch events
This is broken on the browser for both sorting and strike class. Going to test on mobile and go from there

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" 
     crossorigin="anonymous"></script>
 
+    <!-- SortableJS library for touch events -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script> -->
 
 
