Added styling to center h2, p, and input field
Changed h2 wording to be more mobile-forward

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>To-Do List App</h2>
-        <p><em> Double click to mark an item off, click on "x" to
+        <p><em> Double-tap or click to mark an item off, tap or click on "x" to
             delete an item, and drag items to reorder </em></p>
 
             <form name="toDoList" onsubmit="newItem(); return false">
